[gd_scene load_steps=11 format=3 uid="uid://b2hdstu70nyx7"]

[ext_resource type="Script" path="res://scripts/attic1.gd" id="1_qligt"]
[ext_resource type="Texture2D" uid="uid://dhy6527v6h5r6" path="res://images/attic.png" id="2_wppbg"]
[ext_resource type="Texture2D" uid="uid://cnl6h787hia7k" path="res://images/pillarRight.png" id="3_um02u"]
[ext_resource type="Texture2D" uid="uid://cd4a0jsta51i4" path="res://images/rat.png" id="4_gd4ym"]
[ext_resource type="Texture2D" uid="uid://bl8trwvomot62" path="res://images/pillarLeft.png" id="5_h1ltl"]
[ext_resource type="PackedScene" uid="uid://dq3qjwhrl4stg" path="res://scenes/npcs.tscn" id="7_6l8f3"]
[ext_resource type="Texture2D" uid="uid://bb5xdmwh2j814" path="res://images/Salami.png" id="8_xsnfc"]
[ext_resource type="PackedScene" uid="uid://bjslxs2nfkoew" path="res://scenes/player.tscn" id="9_bd0ua"]
[ext_resource type="Script" path="res://scripts/fallowCam.gd" id="10_yrcif"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vkjba"]
size = Vector2(10, 2.0625)

[node name="attic1" type="Node2D" node_paths=PackedStringArray("nodesToRemove", "nodesToAdd")]
z_as_relative = false
y_sort_enabled = true
texture_filter = 1
position = Vector2(2, 1)
script = ExtResource("1_qligt")
nodesToRemove = [NodePath("StaticBody2D/Attic/salami")]
nodesToAdd = [NodePath("StaticBody2D/Attic/rat")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
y_sort_enabled = true

[node name="Attic" type="Sprite2D" parent="StaticBody2D"]
z_index = 1
y_sort_enabled = true
texture_filter = 1
position = Vector2(611, 197)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_wppbg")

[node name="pilllarRight" type="Sprite2D" parent="StaticBody2D/Attic"]
texture_filter = 1
position = Vector2(339, 71.333)
texture = ExtResource("3_um02u")
offset = Vector2(0, -101)

[node name="pillarLeft" type="Sprite2D" parent="StaticBody2D/Attic"]
texture_filter = 1
position = Vector2(-342, 71.3333)
texture = ExtResource("5_h1ltl")
offset = Vector2(0, -101)

[node name="salami" type="Sprite2D" parent="StaticBody2D/Attic"]
y_sort_enabled = true
position = Vector2(36, 33.3333)
texture = ExtResource("8_xsnfc")
offset = Vector2(0, -20)

[node name="salami" parent="StaticBody2D/Attic/salami" instance=ExtResource("7_6l8f3")]
position = Vector2(-0.000305176, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Attic/salami/salami"]
position = Vector2(6.10352e-05, 0)
shape = SubResource("RectangleShape2D_vkjba")

[node name="bed" parent="StaticBody2D/Attic" instance=ExtResource("7_6l8f3")]
position = Vector2(-294, 20)
scale = Vector2(3.89, 1.465)
flipCharacter = false

[node name="rat" type="Sprite2D" parent="StaticBody2D/Attic"]
y_sort_enabled = true
position = Vector2(-20.6667, 73.3333)
scale = Vector2(0.65, 0.65)
texture = ExtResource("4_gd4ym")

[node name="rat" parent="StaticBody2D/Attic/rat" instance=ExtResource("7_6l8f3")]
position = Vector2(-0.000305176, -1)
scale = Vector2(1.77, 1.66)
flipCharacter = false

[node name="ladder" parent="StaticBody2D/Attic" instance=ExtResource("7_6l8f3")]
position = Vector2(300, 23.333)
scale = Vector2(2.655, 2.19)
flipCharacter = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
z_index = 2
position = Vector2(567, 69)
polygon = PackedVector2Array(-564, 322, 646, 318, 605, 235, 583, 235, 564, 213, 577, 213, 554, 134, 518, 134, 536, 180, 468, 180, 454, 128, 410, 128, 410, 154, 374, 154, 368, 130, 248, 130, 248, 154, 212, 154, 206, 128, 52, 128, 52, 156, 28, 156, 28, 130, -120, 130, -124, 154, -150, 154, -156, 143, -173, 143, -186, 180, -272, 180, -272, 130, -292, 130, -297, 155, -333, 155, -333, 131, -461, 131, -495, 215, -489, 215, -499, 235, -519, 235, -566, 322, -472, 128, 553, 121, 652, 322)

[node name="player" parent="." instance=ExtResource("9_bd0ua")]
position = Vector2(1028, 287)
scale = Vector2(1, 1)

[node name="Camera2D" type="Camera2D" parent="player" node_paths=PackedStringArray("map")]
position = Vector2(0, -25)
limit_left = 0
limit_top = -30
script = ExtResource("10_yrcif")
map = NodePath("../../StaticBody2D/Attic")
