[gd_scene load_steps=17 format=3 uid="uid://txcyc4jvg0bt"]

[ext_resource type="Texture2D" uid="uid://bo0srpnpw4f1y" path="res://images/attic2.png" id="1_hmrm0"]
[ext_resource type="Script" path="res://scripts/attic1.gd" id="1_yktym"]
[ext_resource type="Texture2D" uid="uid://cnl6h787hia7k" path="res://images/pillarRight.png" id="2_6iocm"]
[ext_resource type="Texture2D" uid="uid://cd4a0jsta51i4" path="res://images/rat.png" id="3_3y2x6"]
[ext_resource type="Texture2D" uid="uid://bl8trwvomot62" path="res://images/pillarLeft.png" id="4_4akdx"]
[ext_resource type="Texture2D" uid="uid://bb5xdmwh2j814" path="res://images/Salami.png" id="5_wefqm"]
[ext_resource type="PackedScene" uid="uid://dq3qjwhrl4stg" path="res://scenes/npcs.tscn" id="6_1umch"]
[ext_resource type="Texture2D" uid="uid://cnyy60eqrrth7" path="res://images/noodle.png" id="6_cas63"]
[ext_resource type="Texture2D" uid="uid://wwrqch8natn5" path="res://images/snitel.png" id="6_jleux"]
[ext_resource type="PackedScene" uid="uid://bjslxs2nfkoew" path="res://scenes/player.tscn" id="7_gjn45"]
[ext_resource type="Script" path="res://scripts/fallowCam.gd" id="8_c3abr"]
[ext_resource type="Texture2D" uid="uid://btmekuxcr5vnu" path="res://images/cat.png" id="11_ea5dy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqg81"]
size = Vector2(117, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kf7tw"]
size = Vector2(10, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7w44"]
size = Vector2(12, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgy80"]
size = Vector2(10, 2.0625)

[node name="attic2" type="Node2D" node_paths=PackedStringArray("nodesToRemove", "nodesToAdd")]
y_sort_enabled = true
script = ExtResource("1_yktym")
nodesToRemove = [NodePath("StaticBody2D/Attic/snitel"), NodePath("StaticBody2D/Attic/salami"), NodePath("StaticBody2D/Attic/noodle")]
nodesToAdd = [NodePath("StaticBody2D/Attic/rat"), NodePath("StaticBody2D/Attic/cat")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
y_sort_enabled = true

[node name="Attic" type="Sprite2D" parent="StaticBody2D"]
z_index = 1
y_sort_enabled = true
texture_filter = 1
position = Vector2(611, 197)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_hmrm0")

[node name="pilllarRight" type="Sprite2D" parent="StaticBody2D/Attic"]
texture_filter = 1
position = Vector2(339, 71.333)
texture = ExtResource("2_6iocm")
offset = Vector2(0, -101)

[node name="pillarLeft" type="Sprite2D" parent="StaticBody2D/Attic"]
texture_filter = 1
position = Vector2(-342, 71.3333)
texture = ExtResource("4_4akdx")
offset = Vector2(0, -101)

[node name="ladder" type="Area2D" parent="StaticBody2D/Attic"]
position = Vector2(162.667, 21.3333)
scale = Vector2(0.666667, 0.666667)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Attic/ladder"]
position = Vector2(204.999, 3.00005)
shape = SubResource("RectangleShape2D_uqg81")

[node name="noodle" type="Sprite2D" parent="StaticBody2D/Attic"]
position = Vector2(64.6667, 31.3333)
texture = ExtResource("6_cas63")
offset = Vector2(0, -20)
flip_h = true

[node name="noodle" parent="StaticBody2D/Attic/noodle" instance=ExtResource("6_1umch")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Attic/noodle/noodle"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_kf7tw")

[node name="snitel" type="Sprite2D" parent="StaticBody2D/Attic"]
position = Vector2(364, 76.6667)
texture = ExtResource("6_jleux")
offset = Vector2(0, -21)
flip_h = true

[node name="snitel" parent="StaticBody2D/Attic/snitel" instance=ExtResource("6_1umch")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Attic/snitel/snitel"]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_t7w44")

[node name="salami" type="Sprite2D" parent="StaticBody2D/Attic"]
y_sort_enabled = true
position = Vector2(-5.33334, 33.3333)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_wefqm")
offset = Vector2(0, -20)

[node name="salami" parent="StaticBody2D/Attic/salami" instance=ExtResource("6_1umch")]
position = Vector2(-0.000305176, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Attic/salami/salami"]
position = Vector2(6.10352e-05, 0)
shape = SubResource("RectangleShape2D_dgy80")

[node name="bed" parent="StaticBody2D/Attic" instance=ExtResource("6_1umch")]
position = Vector2(-294, 20)
scale = Vector2(3.89, 1.465)
flipCharacter = false

[node name="rat" type="Sprite2D" parent="StaticBody2D/Attic"]
y_sort_enabled = true
position = Vector2(-20.6667, 73.3333)
scale = Vector2(0.65, 0.65)
texture = ExtResource("3_3y2x6")

[node name="rat" parent="StaticBody2D/Attic/rat" instance=ExtResource("6_1umch")]
position = Vector2(-0.000305176, -1)
scale = Vector2(1.77, 1.66)
flipCharacter = false

[node name="cat" type="Sprite2D" parent="StaticBody2D/Attic"]
y_sort_enabled = true
position = Vector2(-176.667, 34.6667)
texture = ExtResource("11_ea5dy")

[node name="cat" parent="StaticBody2D/Attic/cat" instance=ExtResource("6_1umch")]
position = Vector2(-0.000305176, -1)
scale = Vector2(3.44, 1.875)
flipCharacter = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
z_index = 2
position = Vector2(567, 69)
polygon = PackedVector2Array(-564, 322, 646, 318, 605, 235, 583, 235, 564, 213, 577, 213, 554, 134, 518, 134, 536, 180, 468, 180, 454, 128, 410, 128, 410, 154, 374, 154, 368, 130, 248, 130, 248, 154, 212, 154, 206, 128, 52, 128, 52, 156, 28, 156, 28, 130, -120, 130, -124, 154, -150, 154, -156, 143, -173, 143, -186, 180, -272, 180, -272, 130, -292, 130, -297, 155, -333, 155, -333, 131, -461, 131, -495, 215, -489, 215, -499, 235, -519, 235, -566, 322, -472, 128, 553, 121, 652, 322)

[node name="player" parent="." instance=ExtResource("7_gjn45")]
position = Vector2(1002, 272)
scale = Vector2(1.5, 1.5)

[node name="Camera2D" type="Camera2D" parent="player" node_paths=PackedStringArray("map")]
position = Vector2(0, -25)
limit_left = 0
limit_top = -30
script = ExtResource("8_c3abr")
map = NodePath("../../StaticBody2D/Attic")

[connection signal="body_entered" from="StaticBody2D/Attic/ladder" to="." method="_on_ladder_body_entered"]
[connection signal="body_exited" from="StaticBody2D/Attic/ladder" to="." method="_on_ladder_body_exited"]
