[gd_scene load_steps=22 format=3 uid="uid://ew1axsd8a21v"]

[ext_resource type="Texture2D" uid="uid://bq33m8q2jm2vf" path="res://images/attic3.png" id="1_hreuw"]
[ext_resource type="Script" path="res://scripts/attic1.gd" id="1_o54qx"]
[ext_resource type="Texture2D" uid="uid://cnl6h787hia7k" path="res://images/pillarRight.png" id="2_0hdv1"]
[ext_resource type="Texture2D" uid="uid://bl8trwvomot62" path="res://images/pillarLeft.png" id="4_b3ejw"]
[ext_resource type="Texture2D" uid="uid://bb5xdmwh2j814" path="res://images/Salami.png" id="5_smtyv"]
[ext_resource type="PackedScene" uid="uid://dq3qjwhrl4stg" path="res://scenes/npcs.tscn" id="6_yk6ni"]
[ext_resource type="PackedScene" uid="uid://bjslxs2nfkoew" path="res://scenes/player.tscn" id="7_c0k0d"]
[ext_resource type="Script" path="res://scripts/fallowCam.gd" id="8_wwwbs"]
[ext_resource type="Texture2D" uid="uid://wwrqch8natn5" path="res://images/snitel.png" id="9_81kei"]
[ext_resource type="Texture2D" uid="uid://cs1ewn5dj6j86" path="res://images/flapjack1.png" id="11_1flva"]
[ext_resource type="Texture2D" uid="uid://btemuxo4ofv26" path="res://images/flapjack2.png" id="11_1gwks"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o4h6l"]
size = Vector2(12, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3u8bd"]
size = Vector2(10, 2.0625)

[sub_resource type="Animation" id="Animation_7va47"]
length = 0.001

[sub_resource type="Animation" id="Animation_yq6j3"]
resource_name = "crying"
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_ae1p4"]
resource_name = "normal"
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bhd0y"]
_data = {
"RESET": SubResource("Animation_7va47"),
"crying": SubResource("Animation_yq6j3"),
"normal": SubResource("Animation_ae1p4")
}

[sub_resource type="GDScript" id="GDScript_6ieak"]
script/source = "extends Sprite2D

@export var animationPlayer:AnimationPlayer

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	if globals.npcTriggered[\"flapjack2\"]==true:
		animationPlayer.play(\"noHead\")

"

[sub_resource type="Animation" id="Animation_l5bfy"]
resource_name = "noHead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_epm1s"]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_88n7s"]
_data = {
"noHead": SubResource("Animation_l5bfy"),
"normal": SubResource("Animation_epm1s")
}

[node name="attic3" type="Node2D" node_paths=PackedStringArray("nodesToRemove", "nodesToAdd")]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_o54qx")
nodesToRemove = [NodePath("StaticBody2D/Attic/snitel"), NodePath("StaticBody2D/Attic/flapjack"), NodePath("StaticBody2D/Attic/salami")]
nodesToAdd = [NodePath("StaticBody2D/Attic/flapjack2")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
y_sort_enabled = true

[node name="Attic" type="Sprite2D" parent="StaticBody2D"]
z_index = 1
y_sort_enabled = true
texture_filter = 1
position = Vector2(611, 197)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_hreuw")

[node name="pilllarRight" type="Sprite2D" parent="StaticBody2D/Attic"]
texture_filter = 1
position = Vector2(339, 71.333)
texture = ExtResource("2_0hdv1")
offset = Vector2(0, -101)

[node name="pillarLeft" type="Sprite2D" parent="StaticBody2D/Attic"]
texture_filter = 1
position = Vector2(-342, 71.3333)
texture = ExtResource("4_b3ejw")
offset = Vector2(0, -101)

[node name="bed" parent="StaticBody2D/Attic" instance=ExtResource("6_yk6ni")]
position = Vector2(333.333, 106.667)
scale = Vector2(3.89, 1.465)
flipCharacter = false

[node name="snitel" type="Sprite2D" parent="StaticBody2D/Attic"]
position = Vector2(-353.333, 81.3333)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_81kei")
offset = Vector2(0, -21)

[node name="snitel" parent="StaticBody2D/Attic/snitel" instance=ExtResource("6_yk6ni")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Attic/snitel/snitel"]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_o4h6l")

[node name="salami" type="Sprite2D" parent="StaticBody2D/Attic"]
y_sort_enabled = true
position = Vector2(-5.33334, 33.3333)
scale = Vector2(2, 2)
texture = ExtResource("5_smtyv")
offset = Vector2(0, -20)

[node name="salami" parent="StaticBody2D/Attic/salami" instance=ExtResource("6_yk6ni")]
position = Vector2(-0.000305176, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Attic/salami/salami"]
position = Vector2(6.10352e-05, 0)
shape = SubResource("RectangleShape2D_3u8bd")

[node name="flapjack" type="Sprite2D" parent="StaticBody2D/Attic"]
position = Vector2(97.3333, 44.6667)
texture = ExtResource("11_1flva")
offset = Vector2(0, -21)
hframes = 2

[node name="flapjack" parent="StaticBody2D/Attic/flapjack" instance=ExtResource("6_yk6ni")]
position = Vector2(-1.65, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Attic/flapjack/flapjack"]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_o4h6l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticBody2D/Attic/flapjack"]
libraries = {
"": SubResource("AnimationLibrary_bhd0y")
}

[node name="flapjack2" type="Sprite2D" parent="StaticBody2D/Attic" node_paths=PackedStringArray("animationPlayer")]
position = Vector2(16.0003, 96.4)
texture = ExtResource("11_1gwks")
flip_h = true
hframes = 2
script = SubResource("GDScript_6ieak")
animationPlayer = NodePath("AnimationPlayer")

[node name="flapjack2" parent="StaticBody2D/Attic/flapjack2" instance=ExtResource("6_yk6ni")]
scale = Vector2(-2.285, 1.475)
flipCharacter = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Attic/flapjack2/flapjack2"]
position = Vector2(-0.585, 1.36)
scale = Vector2(1.02, 0.985)
shape = SubResource("RectangleShape2D_o4h6l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticBody2D/Attic/flapjack2"]
libraries = {
"": SubResource("AnimationLibrary_88n7s")
}

[node name="ladder" parent="StaticBody2D/Attic" instance=ExtResource("6_yk6ni")]
position = Vector2(300, 23.333)
scale = Vector2(2.655, 2.19)
flipCharacter = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
z_index = 2
position = Vector2(567, 69)
polygon = PackedVector2Array(-564, 322, 646, 318, 605, 235, 583, 235, 564, 213, 577, 213, 554, 134, 518, 134, 536, 180, 468, 180, 454, 128, 410, 128, 410, 154, 374, 154, 368, 130, 248, 130, 248, 154, 212, 154, 206, 128, 52, 128, 52, 156, 28, 156, 28, 130, -120, 130, -124, 154, -150, 154, -156, 143, -173, 143, -186, 180, -272, 180, -272, 130, -292, 130, -297, 155, -333, 155, -333, 131, -461, 131, -495, 215, -489, 215, -499, 235, -519, 235, -566, 322, -472, 128, 553, 121, 652, 322)

[node name="player" parent="." instance=ExtResource("7_c0k0d")]
position = Vector2(1017, 274)

[node name="Camera2D" type="Camera2D" parent="player" node_paths=PackedStringArray("map")]
position = Vector2(0, -25)
limit_left = 0
limit_top = -30
script = ExtResource("8_wwwbs")
map = NodePath("../../StaticBody2D/Attic")
